@@ -34,12 +34,36 @@ Please READ this carefully, otherwise your ircd won't boot!
     even be done by an installer), after that you just add a loadmodule line for it,
     like: loadmodule "modules/leetmod.dll";
     NOTE: Just as on *NIX, you'll have to upgrade your modules every release.
-- Added set::spamfilter::virus-help-channel-deny: blocks any normal joins to the
+- set::spamfilter::virus-help-channel-deny: blocks any normal joins to the
   virus-help-channel (only people force-joined by spamfilter and opers can join).
+- set::options::flat-map: Makes all server appear as directly-linked in /links,
+  /map, etc. Thus, link info (which server is linked to which) is hidden from users.
+- NickIP was added, this means IP's of users are now known by all servers:
+  - IP is now shown in the 'is connecting from' line in /whois (if selfwhois or oper)
+  - "Far connects" (+s +F) together with HCN (Hybrid Connect Notice) can now see
+    IP's as well. This allows you to use for example 1 central BOPM.
+  - New /who options:
+    - /who +i <ip/mask> allows you to search by IP (eg: /who +i 10.*)
+    - /who +I will show IP's of everyone (bit like /who +R)
+- Added DCCALLOW system (taken from bahamut). With this system you can block certain
+  (or all) DCC SENDs and then allow the user to 'override' this limit for every user
+  he/she trusts via '/DCCALLOW +User'. This is an attempt to stop (or at least limit)
+  the spreading of viruses and other malware.
+  - added deny dcc::soft option, if 'soft' is set to yes in a deny dcc block it means
+    users can override it via DCCALLOW.
+  - set::maxdccallow controls the max. number of items on the DCCALLOW list (default:10)
+- Added allow dcc { } by which you can make certain exceptions over deny dcc { }
+- Added extended ban type ~n (nickchange ban). if a user matches this (s)he can not
+  change nicks unless (s)he has voice or higher (ex: +b ~n:*!*@*.aol.com).
+- Added set::restrict-extendedbans by which you can disallow normal users to use any
+  extended bans ("*") or disallow only certain ones (eg: "qc").
+- Added CIDR support (eg: 192.168.0.0/16). Now implemented for: ban ip, ban user,
+  allow, except ban/tkl/throttle, and TKL (*lines).
+- '/dns c' will clear the DNS cache
 
 ==[ MAJOR BUGS FIXED ]==
-- win32: people have reported TRE crashes upon /rehash, hopefully these
-  are resolved now (upgraded to TRE 0.6.7). [?????????????????????????????????]
+- win32: crash bugs in TRE on /rehash are probably fixed.
+- qlines (banned nicks) could cause crashes
 
 ==[ MINOR BUGS FIXED ]==
 - GUEST support wasn't working
@@ -47,6 +71,7 @@ Please READ this carefully, otherwise your ircd won't boot!
 - compiles fine with SSL support on OpenBSD 3.5 now.
 - Local opers can now join +O (operonly) channels
 - Permanent modules: custom allow/except/ban/deny types were lost after /rehash
+- Fixed an SVSNICK bug that could lead to duplicate users in very rare circumstances
 
 ==[ CHANGED ]==
 - spamfilter.conf.......................
@@ -60,6 +85,12 @@ Please READ this carefully, otherwise your ircd won't boot!
 - SVSJOIN now also supports channel keys
 - Docs, help.conf and other text updates
 - Added zlib+SSL+curl version check on boot to protect against crashes
+- Win32: socket errors are now a bit more clear (less 'Unknown error <code>' now).
+- Win32: now using dynamically linked libc to get rid of some crashbugs. The dll,
+  msvcr70d.dll, will be downloaded automatically if needed.
+- Made the 'negative TS' warning a bit more annoying since a lot of people don't
+  understand how critical correct time for IRC is.
+- To be able to use /ADDLINE you now need the (new) 'can_addline' operflag (oper::flags)
 
 ==[ ADDITIONAL INFO ]==
 * See Changelog
